# pollution_tracker_fastapi

./: .env  README.md  alembic.ini  deletedb.sh  project_instruction.txt  pyproject.toml  requirements.txt  run.sh
alembic/: env.py
alembic/versions/: 236672482991_creating_migration.py
app/: main.py
app/core/: config.py
app/db/: dependencies.py  sessions.py
app/models/: __init__.py  pollution_data.py  weather_data.py
app/routers/v1/: pollution.py  weather.py
app/schemas/: pollution.py  pollution_overview.py  weather.py
app/scripts/: check_db.py  populate_data.py
app/services/: pollution.py  weather.py
